--- a/src/components/Appointment/styles.scss
+++ b/src/components/Appointment/styles.scss
@@ -20,7 +20,9 @@ $appointment-height: 11rem;
       }
     }
   }
-
+  .appointment:last-of-type .appointment__add {
+    display: none;
+  }
   &__time {
     display: flex;
   }
